[project]
requires-python = ">=3.13"
name = "robot-viewer"
version = "0.1.0"
description = "Terminal Viewer für Robot Framework Ergebnisse"
dependencies = [
    "textual>=0.50.0",
    "robotframework>=7.0",
]

[project.scripts]
robot-view = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["/"]

